--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.4.0",
     "body-parser": "~1.17.1",
-    "async":"^2.4.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "genetic": "0.3.1",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "node-jq": "^0.5.4",
-    "serve-favicon": "~2.4.2",
-    "genetic":"0.3.1"
+    "ntseq": "^1.1.0",
+    "serve-favicon": "~2.4.2"
   },
   "main": "app.js",
   "devDependencies": {},
